laboratorios/laboratorio7/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: vcc-python-helloworld
  name: vcc-python-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vcc-python-helloworld
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vcc-python-helloworld
    spec:
      containers:
      - image: videocursoscloud/vcc-python-helloworld
        imagePullPolicy: Always
        name: vcc-python-helloworld
        ports:
        - containerPort: 5000
        resources: {}
status: {}
